--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@nuxt/content": "^3.0.0",
     "@pinia/nuxt": "^0.9.0",
     "@tailwindcss/vite": "^4.0.0",
+    "flowbite": "^3.0.0",
     "nuxt": "^3.15.2",
     "pinia": "^2.3.1",
     "postcss-nesting": "^13.0.1",
